[gd_scene load_steps=6 format=3 uid="uid://3e54g8m15uai"]

[ext_resource type="Script" path="res://addons/game_manager/components/character/character_box.gd" id="1_covi6"]
[ext_resource type="Texture2D" uid="uid://crnd63b1g2rv2" path="res://addons/game_manager/icons/trashcan.svg" id="1_uahu4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_m1gb4"]

[sub_resource type="LabelSettings" id="LabelSettings_db3o5"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_075fw"]
font_size = 14

[node name="CharacterBox" type="Control" node_paths=PackedStringArray("background", "delete_button", "character_image", "character_id", "character_name")]
custom_minimum_size = Vector2(0, 53)
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.082
offset_right = 0.431976
offset_bottom = -0.136002
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_covi6")
background = NodePath("Background")
delete_button = NodePath("MarginContainer/HBoxContainer/Delete")
character_image = NodePath("MarginContainer/HBoxContainer/Info/Image")
character_id = NodePath("MarginContainer/HBoxContainer/Info/VBoxContainer/ID")
character_name = NodePath("MarginContainer/HBoxContainer/Info/VBoxContainer/Name")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(0.85, 0.852, 0.852, 1)
custom_minimum_size = Vector2(0, 53)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"BluePanel"

[node name="Button" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 53)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Info" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 4

[node name="Image" type="TextureRect" parent="MarginContainer/HBoxContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("CanvasTexture_m1gb4")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Info"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = -4
alignment = 1

[node name="ID" type="Label" parent="MarginContainer/HBoxContainer/Info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"LabelBold"
text = "1 (Unknown)"
label_settings = SubResource("LabelSettings_db3o5")
text_overrun_behavior = 3

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/Info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"LabelBold"
text = "New Character"
label_settings = SubResource("LabelSettings_075fw")
text_overrun_behavior = 3

[node name="Delete" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_uahu4")
stretch_mode = 3

[connection signal="button_down" from="Background/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Background/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Background/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Background/Button" to="." method="_on_button_mouse_exited"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_button_down"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_button_up"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_mouse_exited"]
